src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_messages_test__case_with_unexpected_token.snap
---
source: src/parser/tests/parse_errors/parse_error_messages_test.rs
expression: diagnostics
---
error: Case condition used outside of case statement! Did you mean to use ';'?
  ┌─ <internal>:3:27
  │
3 │         CASE StateMachine DELTA
  │                           ^^^^^ Case condition used outside of case statement! Did you mean to use ';'?

error: Could not resolve reference to DELTA
  ┌─ <internal>:3:27
  │
3 │         CASE StateMachine DELTA
  │                           ^^^^^ Could not resolve reference to DELTA

error: Could not resolve reference to x
  ┌─ <internal>:4:12
  │
4 │         1: x;
  │            ^ Could not resolve reference to x


